Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.h
@@ -63,6 +63,7 @@ public:
         virtual OSStatus defaultInputDevice(uint32_t*) = 0;
         virtual OSStatus defaultOutputDevice(uint32_t*) = 0;
         virtual void delaySamples(Seconds) { }
+        virtual Seconds verifyCaptureInterval(bool isProducingSamples) const { return isProducingSamples ? 10_s : 2_s; }
     };
 
     WEBCORE_EXPORT static CoreAudioSharedUnit& unit();
@@ -120,8 +121,6 @@ private:
 
     void verifyIsCapturing();
 
-    Seconds verifyCaptureInterval() { return isProducingMicrophoneSamples() ? 10_s : 2_s; }
-
     CreationCallback m_creationCallback;
     GetSampleRateCallback m_getSampleRateCallback;
     std::unique_ptr<InternalUnit> m_ioUnit;
@@ -155,7 +154,7 @@ private:
     uint64_t m_microphoneProcsCalledLastTime { 0 };
     Timer m_verifyCapturingTimer;
 
-    bool m_shouldUpdateMicrophoneSampleBufferSize { false };
+    std::optional<size_t> m_minimumMicrophoneSampleFrames;
     bool m_isReconfiguring { false };
     bool m_shouldNotifySpeakerSamplesProducer { false };
     bool m_hasNotifiedSpeakerSamplesProducer { false };
